# unitTest

./: CMakeLists.txt  README.md  algorithms.cpp  algorithms.h  algorithms_unittest.cpp  findUnitTest.cpp  main.cpp  maxElementUnitTest.cpp  reverseUnitTest.cpp
unitTestResults/: unitTestResults_FIN.txt  unitTestResults_verbose.txt  unitTestsResluts_FINAL.txt
